RESOLVED FIXED51598
[Qt] [WK2] WebKit 2 does not build on mac, missing reference to RetainPtr
https://bugs.webkit.org/show_bug.cgi?id=51598
Summary [Qt] [WK2] WebKit 2 does not build on mac, missing reference to RetainPtr
Benjamin Poulain
Reported 2010-12-24 12:07:45 PST
WebKit 2 does not build on Mac with default options. The problem comes from the following code: static String formatLocalizedString(const String& format, ...) { #if PLATFORM(CF) va_list arguments; va_start(arguments, format); RetainPtr<CFStringRef> formatCFString(AdoptCF, format.createCFString()); RetainPtr<CFStringRef> result(AdoptCF, CFStringCreateWithFormatAndArguments(0, 0, formatCFString.get(), arguments)); va_end(arguments); return result.get(); #else notImplemented(); return format; #endif } It uses RetainPtr(), but does not include the header file. This break has been introduced by 43505.
Attachments
Patch (1.05 KB, patch)
2010-12-24 12:12 PST, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2010-12-24 12:12:51 PST
Created attachment 77425 [details] Patch I apologize not to push that directly. I do not have my tools here so I figured it would be easier to use the commit queue.
Early Warning System Bot
Comment 2 2010-12-24 12:26:52 PST
WebKit Commit Bot
Comment 3 2010-12-24 12:55:45 PST
Comment on attachment 77425 [details] Patch Clearing flags on attachment: 77425 Committed r74650: <http://trac.webkit.org/changeset/74650>
WebKit Commit Bot
Comment 4 2010-12-24 12:55:50 PST
All reviewed patches have been landed. Closing bug.
mitz
Comment 5 2010-12-24 13:21:34 PST
I don’t think this works.
Benjamin Poulain
Comment 6 2010-12-24 13:55:34 PST
(In reply to comment #5) > I don’t think this works. Why?
mitz
Comment 7 2010-12-24 14:24:28 PST
(In reply to comment #6) > (In reply to comment #5) > > I don’t think this works. > > Why? Breaking Qt Linux <http://build.webkit.org/builders/Qt%20Linux%20Release/builds/25687/steps/compile-webkit/logs/stdio>
mitz
Comment 8 2010-12-24 14:25:26 PST
(In reply to comment #7) > (In reply to comment #6) > > (In reply to comment #5) > > > I don’t think this works. > > > > Why? > > Breaking Qt Linux <http://build.webkit.org/builders/Qt%20Linux%20Release/builds/25687/steps/compile-webkit/logs/stdio> Fixed by Simon in <http://trac.webkit.org/projects/webkit/changeset/74654>.
Benjamin Poulain
Comment 9 2010-12-24 15:09:17 PST
(In reply to comment #8) > > > Why? > > > > Breaking Qt Linux <http://build.webkit.org/builders/Qt%20Linux%20Release/builds/25687/steps/compile-webkit/logs/stdio> > > Fixed by Simon in <http://trac.webkit.org/projects/webkit/changeset/74654>. Thanks Mitz and Simon for fixing the build on Linux.
Csaba Osztrogonác
Comment 10 2010-12-26 03:50:57 PST
(In reply to comment #9) > > Fixed by Simon in <http://trac.webkit.org/projects/webkit/changeset/74654>. > > Thanks Mitz and Simon for fixing the build on Linux. You could have avoided this breakage if you had taken the comment of Qt-EWS seriously.
Note You need to log in before you can comment on or make changes to this bug.