2010-12-24  Benjamin Poulain  <ikipou@gmail.com>

Reviewed by Darin Adler.

        [Qt] [WK2] WebKit 2 does not build on mac, missing reference to RetainPtr
        https://bugs.webkit.org/show_bug.cgi?id=51598

        Fix the build, add the missing header.

        * WebProcess/WebCoreSupport/WebPlatformStrategies.cpp:

Canonical link: https://commits.webkit.org/64989@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74650 268f45cc-cd09-0410-ab3c-d52691b4dbfc